# Fin-DataPilot

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  deploy-to-hf.sh
.github/workflows/: deploy-backend-hf.yml  deploy-frontend.yml
Skills/announcement-search/: SKILL.md
Skills/financial-query/: SKILL.md
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/app/: __init__.py  config.py  db_init.py  main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: executor.py  planner.py  reflector.py  skill_router.py  synthesizer.py
backend/app/agent/prompts/: system.py
backend/app/api/: agent.py  health.py  sessions.py  skills.py
backend/app/llm/: __init__.py
backend/app/skills/: __init__.py  announcement_search.py  anysearch.py  base.py  financial_query.py  news_search.py  registry.py  report_search.py  user_uploads.py
backend/app/storage/: db.py  models.py  repository.py
backend/app/utils/: __init__.py  trace.py
backend/tests/unit/: test_anysearch_skill.py  test_api.py  test_config.py  test_graph_hint_persistence.py  test_multistep_reflection.py  test_persistence.py  test_planner.py  test_prompt_only_skills.py  test_reflector_pattern_followup.py  test_reflector_string_data.py  test_registry.py  test_retention.py  test_router_loop_guard.py  test_skill_upload.py  test_skills_registered.py  test_synthesizer_truncation.py
frontend/: .env.example  .npmrc  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  (+1 more)
(+36 files in other folders)
