[project]
name = "fin-datapilot-backend"
version = "0.1.0"
description = "Fin-DataPilot backend — natural-language financial data agent"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
